# dino_perceptual

./: README.md  REFACTOR_DEEP_DIVE.md  pyproject.toml
dino_perceptual/: __init__.py  dinov3.py  perceptual.py
docs/: index.html
examples/: README.md  compare_dino_lpips.py  compute_fdd.py  distortion_analysis.py  modal_inference.py  run_tests_modal.py  setup_data.py  usage_example.py
examples/figures/: fig_distortions.py  fig_fdd.py  fig_gradient_overlay.py  fig_gradients.py  fig_pareto.py
